Fix css name overlap

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -542,7 +542,7 @@ main {
 .workspace {
   display: flex;
 
-  .left {
+  > .left {
     flex: 1;
     overflow: hidden;
     margin-right: -60px;
@@ -550,7 +550,7 @@ main {
     position: relative;
   }
 
-  .toolbar {
+  > .toolbar {
     z-index: 10;
     width: 60px;
     backdrop-filter: blur(4px);
@@ -587,7 +587,7 @@ main {
     }
   }
 
-  .right {
+  > .right {
     flex: 1;
     z-index: 10;
     min-width: 0;
